# software-architecture-playground

./: .envrc  README.md  go.mod  go.sum  intermediary.yaml
.github/: dependabot.yml
.github/workflows/: ci.yml  generate-sdk.yml  sdk.yml
churchencoding/: README.md  calculator.go  calculator_test.go  go.mod  shape.go  shape_test.go  tree.go  tree_test.go
clean-vertical/: README.md  go.mod
comsim/: README.md  go.mod  whatif.md
continuations/: README.md  go.mod  pythagorean_equation_test.go  sat_solve_test.go  send_more_money_test.go  sudoku_amb_test.go
continuations/amb/: amb.go  pythagorean_equation_test.go  send_more_money_test.go
continuations/cmd/: main.go
continuations/cmd2/: main.go
continuations/sat/: README.md  dag.go  det.go  det_test.go  helper.go  optim.go  prep.go  prep_test.go  print.go  sat.go  sat_test.go
continuations/sudoku/: sudoku.go  sudoku_test.go
datalang/: ast.go  fmt.go  generate.go  generate_test.go  go.mod  parse.go  parse_test.go
datalang/_examples/: maybe_and_list.dpr  (+3 more)
datasim/: readme.md
domodeling/: README.md  domain_test.go  go.mod
eventsourcing/: README.md  go.mod
hypo/wasm/tutorial-01/: Cargo.toml  calculator.wai  python.py
hypo/wasm/tutorial-01/src/: lib.rs
lets-build-db/: 1_naive.go  1_naive_test.go  2_schema.go  2_schema_test.go  3_json_schema.go  3_json_schema_test.go  4_doc.go  4_doc_test.go  go.mod  readme.md
opus/: readme.md
runtime/: README.md  definition.go  eventstore.go  go.mod  go.sum
visitor/: go.mod  visitor.go  visitor_example_test.go  visitor_example_visitor_test.go  visitor_test.go
(+491 files in other folders)
